--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^1.1.2",
-    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
     "simple-icons": "^5.14.0",
     "TagCloud": "^2.2.0",
+    "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "typed.js": "^2.0.16",
     "uuid": "^8.3.2"
