--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^1.1.2",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "simple-icons": "^5.14.0",
     "TagCloud": "^2.2.0",
