--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^1.1.2",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
     "react-tsparticles": "^2.12.2",
     "simple-icons": "^5.14.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.4.1",
     "TagCloud": "^2.2.0",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
